@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2024 DiffPlug
+ * Copyright 2016-2025 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -175,7 +175,7 @@ public class EclipseBasedStepBuilder {
 				char lastChar = version.charAt(version.length() - 1);
 				if ('.' != lastChar && 'a' <= lastChar) {
 					semanticVersion = version.substring(0, version.length() - 1);
-					semanticVersion += String.format(".%d", (int) lastChar);
+					semanticVersion += ".%d".formatted((int) lastChar);
 				}
 			}
 			return semanticVersion;
