@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2023 DiffPlug
+ * Copyright 2016-2025 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -135,7 +135,7 @@ class SimpleRestClient {
 
 		@Override
 		public String getMessage() {
-			return String.format("%s [HTTP %s] -- (%s)", getExceptionMessage(), getStatusCode(), getResponseMessage());
+			return "%s [HTTP %s] -- (%s)".formatted(getExceptionMessage(), getStatusCode(), getResponseMessage());
 		}
 	}
 
