@@ -1,5 +1,5 @@
 /*
- * Copyright 2023-2024 DiffPlug
+ * Copyright 2023-2025 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,7 @@
 package com.diffplug.gradle.spotless;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.assertj.core.api.Assertions;
 import org.gradle.api.file.DirectoryProperty;
@@ -32,13 +32,13 @@ public class SpotlessTaskImplTest {
 		SpotlessTaskImpl task = Mockito.mock(SpotlessTaskImpl.class, Mockito.CALLS_REAL_METHODS);
 		Mockito.when(task.getLogger()).thenReturn(Mockito.mock(Logger.class));
 
-		File projectDir = Paths.get("unitTests", "projectDir").toFile();
+		File projectDir = Path.of("unitTests", "projectDir").toFile();
 		DirectoryProperty projectDirProperty = Mockito.mock(DirectoryProperty.class, Mockito.RETURNS_DEEP_STUBS);
 		Mockito.when(projectDirProperty.get().getAsFile()).thenReturn(projectDir);
 
 		Mockito.when(task.getProjectDir()).thenReturn(projectDirProperty);
 
-		File input = Paths.get("unitTests", "projectDir", "someInput").toFile();
+		File input = Path.of("unitTests", "projectDir", "someInput").toFile();
 		Formatter formatter = Mockito.mock(Formatter.class);
 
 		Assertions.assertThatThrownBy(() -> task.processInputFile(null, formatter, input, "someInput")).hasMessageContaining(input.toString());
